# sing-box-rule

./: .gitignore  README.md  config.toml  pyproject.toml  uv.toml
.github/workflows/: build.yml
ruleset/: build-manifest.json
ruleset/115/: 115.json  115.srs
ruleset/12306/: 12306.json  12306.srs
ruleset/1337x/: 1337x.json  1337x.srs
ruleset/17173/: 17173.json  17173.srs
ruleset/178/: 178.json  178.srs
ruleset/17zuoye/: 17zuoye.json  17zuoye.srs
ruleset/2KGames/: 2KGames.json  2KGames.srs
ruleset/360/: 360.json  360.srs
ruleset/36kr/: 36kr.json  36kr.srs
ruleset/3Type/: 3Type.json  3Type.srs
ruleset/3dm/: 3dm.json  3dm.srs
ruleset/4399/: 4399.json  4399.srs
ruleset/4Paradigm/: 4Paradigm.json  4Paradigm.srs
ruleset/4chan/: 4chan.json  4chan.srs
ruleset/51Job/: 51Job.json  51Job.srs
ruleset/51nod/: 51nod.json  51nod.srs
ruleset/56/: 56.json  56.srs
ruleset/58TongCheng/: 58TongCheng.json  58TongCheng.srs
ruleset/6JianFang/: 6JianFang.json  6JianFang.srs
ruleset/6park/: 6park.json  6park.srs
ruleset/8btc/: 8btc.json  8btc.srs
ruleset/9News/: 9News.json  9News.srs
ruleset/9to5/: 9to5.json  9to5.srs
ruleset/ABC/: ABC.json  ABC.srs
ruleset/AFP/: AFP.json  AFP.srs
ruleset/ALJazeera/: ALJazeera.json  ALJazeera.srs
ruleset/AMD/: AMD.json  AMD.srs
ruleset/AMP/: AMP.json  AMP.srs
ruleset/AOL/: AOL.json  AOL.srs
ruleset/APKCombo/: APKCombo.json  APKCombo.srs
ruleset/ATTWatchTV/: ATTWatchTV.json  ATTWatchTV.srs
ruleset/Abema/: Abema.json  Abema.srs
src/: main.py
tests/: test_clash.py  test_config.py
(+1246 files in other folders)
